main.tf
provider "aws" {
  region     = "us-west-2"
  access_key = ""
  secret_key = ""
}

#Create security group with firewall rules
resource "aws_security_group" "my_security_group" {
  name        = var.security_group
  description = "security group for Ec2 instance"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

 ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

 # outbound from jenkis server
  egress {
    from_port   = 0
    to_port     = 65535
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags= {
    Name = var.security_group
  }
}

# Create AWS ec2 instance
resource "aws_instance" "myFirstInstance" {
  ami           = var.ami_id
  key_name = var.key_name
  instance_type = var.instance_type
  security_groups= [var.security_group]
  user_data = <<-EOF
          #! bin/bash
          sudo yum -y install httpd
          sudo systemctl start httpd
          sudo systemctl enable httpd
          echo "<h1>ecomm website will be launched by sandeep</h1>" >> /var/www/html/index.html
  EOF
  tags= {
    Name = var.tag_name
  }
}
